# task

lesson10/task1/: CMakeLists.txt  task1.cpp  task1.sln  task1.vcxproj
lesson10/task2/: CMakeLists.txt  EquilateralTriangle.cpp  Figure.h  Parallelogram.h  Rectangles.cpp  Rectangles.h  Rhomb.h  RightTriangle.h  Square.h  Triangle.cpp  Triangle.h  task2.cpp  task2.sln  task2.vcxproj  task2.vcxproj.filters
lesson11/task1/: .gitignore  CMakeLists.txt  Greeter.cpp  Greeter.h  task1.cpp
lesson11/task2/: .gitignore  CMakeLists.txt  Leaver.cpp  Leaver.h  task2.cpp  task2.sln  task2.vcxproj
lesson11/task2/LeaverLib/: .gitignore  Leaver.h  LeaverLib.vcxproj  LeaverLib.vcxproj.filters  cpp.hint
lesson11/task3/: CMakeLists.txt  task3.cpp
lesson11/task4/: task4.cpp  task4.sln  task4.vcxproj
lesson11/task5/: CMakeLists.txt  lib_dll.lib  task5.cpp
lesson11/task5/lib/: CMakeLists.txt  EquilateralTriangle.h  Figure.cpp  Parallelogram.cpp  Quadrilateral.h  Rectangles.h  Rhomb.h  RightTriangle.h  Square.cpp  Square.h  Triangle.h
lesson2/task1/: task1.cpp  task1.sln  task1.vcxproj
lesson2/task2/: task2.cpp  task2.sln  task2.vcxproj
lesson2/task3/: task3.cpp  task3.sln  task3.vcxproj
lesson3/task1/: task1.cpp  task1.sln  task1.vcxproj
lesson3/task2/: task2.cpp  task2.sln  task2.vcxproj
lesson4/task1/: task1.cpp  task1.sln  task1.vcxproj
lesson4/task2/: task2.cpp  task2.sln  task2.vcxproj
lesson5/task1/: .gitignore  task1.cpp  task1.sln  task1.vcxproj
lesson5/task2/: task2.cpp  task2.sln  task2.vcxproj
lesson5/task3/: .gitignore  task3.cpp  task3.sln  (+1 more)
(+66 files in other folders)
